Enemy Spawning | Level Layout | Basic Enemy Movement
Enemy Spawning: Enemies spawn off of two preset points (randomly
selected between the two for actual spawning) above the top edge of the
Screen and get to designated positions on Screen.

Level Layout: Game Manager now can spawn enemies according to a set
plan. (depending on how many you killed and hence what stage you’ve
reached)

Basic Enemy Movement: A generic movement based on the moveType set for
each Enemy that can be set when instantiated in GameManager. Currently
handles only one basic movement pattern. (Some random selections
included)

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -53,12 +53,12 @@
      <Compile Include="Assets\Scripts\BulletMove.cs" />
      <Compile Include="Assets\Scripts\CameraShake.cs" />
      <Compile Include="Assets\Scripts\DamageScript.cs" />
-     <Compile Include="Assets\Scripts\EnemyAirMovement.cs" />
+     <Compile Include="Assets\Scripts\EnemyAir.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\GunManager.cs" />
      <Compile Include="Assets\Scripts\Loader.cs" />
      <Compile Include="Assets\Scripts\ObjectPoolerScript.cs" />
-     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\PlayerScript.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/4.6.5/UnityEngine.UI.dll</HintPath>
  </Reference>
